fix: split OSV batch queries for 1000 purls (#65)
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>